Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Manage dynamic label
* Manage prefix, suffix on tree view
* Manage selection_change_with on Selection and Reference fields
* Add Dict fields on form
* Remove Goto
* Add global search
* Add toggle button for menu
* Replace shortcuts by menu favorites
* Move Plugins into toolbar Actions
* Add url to list view
* Add dynamic icon for url
* Add completion on Many2One, Many2Many and One2Many
* Add bookmark on search widget
* Manage domains on Action Window
* Use range for Date/Time fields in filter box
* Allow multi-selection for Selection field in filter box

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Allow to paste in editable list view
* Manage readonly state on group
* Remove "Please wait" box
* Refactorize date widgets
* Manage tuple on Reference
* Add constant interpolation on line graph
* Make Import/Export Data no-modal
* Deactivate switch view button when there is only 1 view
* Manage create/delete field access
* Add dynamic size limit on the One2Many, Many2Many and Char
* Search only on fields in XML view
* Cache action keyword
* Always use cached views
* Manage model access
* Manage time format
* Deactivate attachment button when record is not created

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Remove workflow
* Improve contextual menu:
    - Actions for all relation fields on list view
    - Use icons
    - Add attachments entry
* Use RPCProgress almost everywhere
* Add a simple search box
* New domain parser using shlex
* Better translation dialog box
* Add the richtext widget for WYSIWYG Editor on text fields
* Add a record pool to prefetch more records
* Add Time widget
* Add support for fuzzy_translation
* Activate save button on editing
* Refactor set/get and set/get_client of fields
* Display binary size alongside the buttons in treeview
* Set correctly the focus on tab switching
* Add shortcut to focus search entry